--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,11 +24,11 @@ jobs:
         with:
           name: PowerChell-Release-EXE
           path: |
-            PowerChell\x64\Release-EXE\*.exe
+            PowerChell\x64\Release\*.exe
 
       - name: Upload DLL artifact
         uses: actions/upload-artifact@v4
         with:
           name: PowerChell-Release-DLL
           path: |
-            PowerChellLib\x64\Release-DLL\*.dll
+            PowerChellLib\x64\Release\*.dll
